2015-02-18  Richard Biener  <rguenther@suse.de>

PR tree-optimization/62217
	* tree-ssa-dom.c (cprop_operand): Avoid propagating copies
	into BIVs.

	* gcc.dg/tree-ssa/cunroll-11.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@220785 138bc75d-0d04-0410-961f-82ee72b054a4